# delta_robot_simulation

./: .gitignore  CMakeLists.txt  README.md  Simulation.desktop  package.xml
codesys_code/: DigitalTwin.xml  ObjectSpawner.xml  RobotParser.xml
csv/: Cut2CutwRot.xlsx  Trajectory.csv  angles.csv
delta_robot_plugin/: CMakeLists.txt  delta_robot_plugin.cc  object_plugin.cc  pos.cc
launch/: PIP.launch  auto.launch  four.launch  gazebo.launch  multiple.launch  multiple_ODE.launch  multiple_bullet.launch  multiple_bullet_with_controller.launch  multiple_quick.launch
meshes/: Platform.dae  base_link.dae  base_low_link.dae  lleg2.dae  lleg_link.dae  lq_base_link.dae  lq_base_low.dae  lq_llegl.dae  lq_llegr.dae  lq_uleg.dae  uleg_link.dae  upper_leg.dae
src/: csv_commander.py  delta_robot.py  delta_robot_commander.py  kinematics.py  move_circles.py  move_circles_double.py  object_spawner.py  remote_control.py  spawn_robots.py  tcp_objects.py  tcp_server.py  trajectory_generator.py  udp_objects.py  udp_server.py
urdf/: box.urdf  codian.config  codian.sdf  codian.urdf  conveyor.urdf  delta_robot.config  delta_robot.gv  delta_robot.sdf  delta_robot.urdf  object.urdf  potato.urdf
worlds/: demo_world.world  empty_bullet.world
